// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Internal|Query projects fetches all projects 1`] = `
Object {
  "projects": Object {
    "edges": Array [
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjA=",
        "node": Object {
          "__typename": "Project",
          "archived": false,
          "id": "UHJvamVjdDpwcm9qZWN0Rm9yRW1haWxpbmdDb2xsZWN0Vm90ZQ==",
          "status": "OPENED_PARTICIPATION",
          "title": "Projet pour campagne (vote au dépôt)",
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjE=",
        "node": Object {
          "__typename": "Project",
          "archived": false,
          "id": "UHJvamVjdDpwcm9qZWN0Rm9yRW1haWxpbmdDb25zdWx0YXRpb24=",
          "status": "CLOSED",
          "title": "Projet pour campagne (consultation)",
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjI=",
        "node": Object {
          "__typename": "Project",
          "archived": false,
          "id": "UHJvamVjdDpwcm9qZWN0Rm9yRW1haWxpbmdTZWxlY3Rpb25Wb3Rl",
          "status": "OPENED_PARTICIPATION",
          "title": "Projet pour campagne (vote à la sélection)",
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjM=",
        "node": Object {
          "__typename": "Project",
          "archived": false,
          "id": "UHJvamVjdDpwcm9qZWN0V29ya2Zsb3dDb2xsZWN0Vm90ZQ==",
          "status": "OPENED_PARTICIPATION",
          "title": "BP vote étape de dépôt",
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjQ=",
        "node": Object {
          "__typename": "Project",
          "archived": false,
          "id": "UHJvamVjdDpwcm9qZWN0V29ya2Zsb3dWb3Rl",
          "status": "OPENED_PARTICIPATION",
          "title": "BP vote parcours",
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjU=",
        "node": Object {
          "__typename": "Project",
          "archived": false,
          "id": "UHJvamVjdDpwcm9qZWN0V29ya2Zsb3dWb3RlMg==",
          "status": "OPENED_PARTICIPATION",
          "title": "BP vote parcours min 2 max 2",
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjY=",
        "node": Object {
          "__typename": "Project",
          "archived": false,
          "id": "UHJvamVjdDpwcm9qZWN0UHJvcG9zYWxBcmNoaXZpbmc=",
          "status": "OPENED_PARTICIPATION",
          "title": "BP avec archivage des propositions",
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjc=",
        "node": Object {
          "__typename": "Project",
          "archived": false,
          "id": "UHJvamVjdDpwcm9qZWN0V2l0aE9ubHlPdGhlclN0ZXBPcGVu",
          "status": "OPENED",
          "title": "BP avec étape personalisée ouverte",
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjg=",
        "node": Object {
          "__typename": "Project",
          "archived": false,
          "id": "UHJvamVjdDpwcm9qZWN0RGViYXRlT3BlbldpdGhvdXRWb3Rl",
          "status": "OPENED_PARTICIPATION",
          "title": "Débats ouvert sans vote",
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjk=",
        "node": Object {
          "__typename": "Project",
          "archived": false,
          "id": "UHJvamVjdDpwcm9qZWN0T3JnYVZpc2liaWxpdHlBZG1pbkFuZE1l",
          "status": "OPENED_PARTICIPATION",
          "title": "Budget Participatif d'organisation",
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjEw",
        "node": Object {
          "__typename": "Project",
          "archived": false,
          "id": "UHJvamVjdDpwcm9qZWN0T3JnYVZpc2liaWxpdHlNZQ==",
          "status": "UNKNOWN",
          "title": "projectOrgaVisibilityMe",
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjEx",
        "node": Object {
          "__typename": "Project",
          "archived": false,
          "id": "UHJvamVjdDpyYXBwb3J0RXZhbHVhdGlvbg==",
          "status": "OPENED_PARTICIPATION",
          "title": "Rapport d'évaluation 6 (AR6)",
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjEy",
        "node": Object {
          "__typename": "Project",
          "archived": false,
          "id": "UHJvamVjdDpwcm9qZWN0SWRmMw==",
          "status": "OPENED_PARTICIPATION",
          "title": "Budget Participatif IdF 3",
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjEz",
        "node": Object {
          "__typename": "Project",
          "archived": false,
          "id": "UHJvamVjdDpwcm9qZWN0Rm9vZA==",
          "status": "OPENED_PARTICIPATION",
          "title": "Food project",
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjE0",
        "node": Object {
          "__typename": "Project",
          "archived": true,
          "id": "UHJvamVjdDpwcm9qZWN0QXJjaGl2ZWQ=",
          "status": "UNKNOWN",
          "title": "Projet Archivé",
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjE1",
        "node": Object {
          "__typename": "Project",
          "archived": false,
          "id": "UHJvamVjdDpwcm9qZWN0Q29uZmluZW1lbnQ=",
          "status": "CLOSED",
          "title": "Débat du mois",
        },
      },
    ],
    "totalCount": 54,
  },
}
`;

exports[`Internal|Query projects fetches archived projects 1`] = `
Object {
  "projects": Object {
    "edges": Array [
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjA=",
        "node": Object {
          "__typename": "Project",
          "archived": true,
          "id": "UHJvamVjdDpwcm9qZWN0QXJjaGl2ZWQ=",
          "status": "UNKNOWN",
          "title": "Projet Archivé",
        },
      },
    ],
    "totalCount": 1,
  },
}
`;

exports[`Internal|Query projects fetches closed projects 1`] = `
Object {
  "projects": Object {
    "edges": Array [
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjA=",
        "node": Object {
          "__typename": "Project",
          "archived": false,
          "id": "UHJvamVjdDpwcm9qZWN0Rm9yRW1haWxpbmdDb25zdWx0YXRpb24=",
          "status": "CLOSED",
          "title": "Projet pour campagne (consultation)",
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjE=",
        "node": Object {
          "__typename": "Project",
          "archived": false,
          "id": "UHJvamVjdDpwcm9qZWN0Q29uZmluZW1lbnQ=",
          "status": "CLOSED",
          "title": "Débat du mois",
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjI=",
        "node": Object {
          "__typename": "Project",
          "archived": false,
          "id": "UHJvamVjdDpwcm9qZWN0V3lzaXd5Zw==",
          "status": "CLOSED",
          "title": "Débat Wysiwyg",
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjM=",
        "node": Object {
          "__typename": "Project",
          "archived": false,
          "id": "UHJvamVjdDpwcm9qZWN0TXVsdGlEZWJhdGU=",
          "status": "CLOSED",
          "title": "Débats sur la vie",
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjQ=",
        "node": Object {
          "__typename": "Project",
          "archived": false,
          "id": "UHJvamVjdDpwcm9qZWN0Q29yb25h",
          "status": "CLOSED",
          "title": "Solidarité Covid-19",
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjU=",
        "node": Object {
          "__typename": "Project",
          "archived": false,
          "id": "UHJvamVjdDpwcm9qZWN0Mw==",
          "status": "CLOSED",
          "title": "Transformation numérique des relations",
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjY=",
        "node": Object {
          "__typename": "Project",
          "archived": false,
          "id": "UHJvamVjdDpwcm9qZWN0R3JvdXAy",
          "status": "CLOSED",
          "title": "Projet pour le group2",
        },
      },
    ],
    "totalCount": 7,
  },
}
`;

exports[`Internal|Query projects fetches non archived projects 1`] = `
Object {
  "projects": Object {
    "edges": Array [
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjA=",
        "node": Object {
          "__typename": "Project",
          "archived": false,
          "id": "UHJvamVjdDpwcm9qZWN0Rm9yRW1haWxpbmdDb2xsZWN0Vm90ZQ==",
          "status": "OPENED_PARTICIPATION",
          "title": "Projet pour campagne (vote au dépôt)",
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjE=",
        "node": Object {
          "__typename": "Project",
          "archived": false,
          "id": "UHJvamVjdDpwcm9qZWN0Rm9yRW1haWxpbmdDb25zdWx0YXRpb24=",
          "status": "CLOSED",
          "title": "Projet pour campagne (consultation)",
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjI=",
        "node": Object {
          "__typename": "Project",
          "archived": false,
          "id": "UHJvamVjdDpwcm9qZWN0Rm9yRW1haWxpbmdTZWxlY3Rpb25Wb3Rl",
          "status": "OPENED_PARTICIPATION",
          "title": "Projet pour campagne (vote à la sélection)",
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjM=",
        "node": Object {
          "__typename": "Project",
          "archived": false,
          "id": "UHJvamVjdDpwcm9qZWN0V29ya2Zsb3dDb2xsZWN0Vm90ZQ==",
          "status": "OPENED_PARTICIPATION",
          "title": "BP vote étape de dépôt",
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjQ=",
        "node": Object {
          "__typename": "Project",
          "archived": false,
          "id": "UHJvamVjdDpwcm9qZWN0V29ya2Zsb3dWb3Rl",
          "status": "OPENED_PARTICIPATION",
          "title": "BP vote parcours",
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjU=",
        "node": Object {
          "__typename": "Project",
          "archived": false,
          "id": "UHJvamVjdDpwcm9qZWN0V29ya2Zsb3dWb3RlMg==",
          "status": "OPENED_PARTICIPATION",
          "title": "BP vote parcours min 2 max 2",
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjY=",
        "node": Object {
          "__typename": "Project",
          "archived": false,
          "id": "UHJvamVjdDpwcm9qZWN0UHJvcG9zYWxBcmNoaXZpbmc=",
          "status": "OPENED_PARTICIPATION",
          "title": "BP avec archivage des propositions",
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjc=",
        "node": Object {
          "__typename": "Project",
          "archived": false,
          "id": "UHJvamVjdDpwcm9qZWN0V2l0aE9ubHlPdGhlclN0ZXBPcGVu",
          "status": "OPENED",
          "title": "BP avec étape personalisée ouverte",
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjg=",
        "node": Object {
          "__typename": "Project",
          "archived": false,
          "id": "UHJvamVjdDpwcm9qZWN0RGViYXRlT3BlbldpdGhvdXRWb3Rl",
          "status": "OPENED_PARTICIPATION",
          "title": "Débats ouvert sans vote",
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjk=",
        "node": Object {
          "__typename": "Project",
          "archived": false,
          "id": "UHJvamVjdDpwcm9qZWN0T3JnYVZpc2liaWxpdHlBZG1pbkFuZE1l",
          "status": "OPENED_PARTICIPATION",
          "title": "Budget Participatif d'organisation",
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjEw",
        "node": Object {
          "__typename": "Project",
          "archived": false,
          "id": "UHJvamVjdDpwcm9qZWN0T3JnYVZpc2liaWxpdHlNZQ==",
          "status": "UNKNOWN",
          "title": "projectOrgaVisibilityMe",
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjEx",
        "node": Object {
          "__typename": "Project",
          "archived": false,
          "id": "UHJvamVjdDpyYXBwb3J0RXZhbHVhdGlvbg==",
          "status": "OPENED_PARTICIPATION",
          "title": "Rapport d'évaluation 6 (AR6)",
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjEy",
        "node": Object {
          "__typename": "Project",
          "archived": false,
          "id": "UHJvamVjdDpwcm9qZWN0SWRmMw==",
          "status": "OPENED_PARTICIPATION",
          "title": "Budget Participatif IdF 3",
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjEz",
        "node": Object {
          "__typename": "Project",
          "archived": false,
          "id": "UHJvamVjdDpwcm9qZWN0Rm9vZA==",
          "status": "OPENED_PARTICIPATION",
          "title": "Food project",
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjE0",
        "node": Object {
          "__typename": "Project",
          "archived": false,
          "id": "UHJvamVjdDpwcm9qZWN0Q29uZmluZW1lbnQ=",
          "status": "CLOSED",
          "title": "Débat du mois",
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjE1",
        "node": Object {
          "__typename": "Project",
          "archived": false,
          "id": "UHJvamVjdDpwcm9qZWN0V2l0aEFub255bW91c1F1ZXN0aW9ubmFpcmU=",
          "status": "OPENED_PARTICIPATION",
          "title": "Projet avec questionnaire anonyme",
        },
      },
    ],
    "totalCount": 53,
  },
}
`;

exports[`Internal|Query projects fetches opened participation projects 1`] = `
Object {
  "projects": Object {
    "edges": Array [
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjA=",
        "node": Object {
          "__typename": "Project",
          "archived": false,
          "id": "UHJvamVjdDpwcm9qZWN0Rm9yRW1haWxpbmdDb2xsZWN0Vm90ZQ==",
          "status": "OPENED_PARTICIPATION",
          "title": "Projet pour campagne (vote au dépôt)",
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjE=",
        "node": Object {
          "__typename": "Project",
          "archived": false,
          "id": "UHJvamVjdDpwcm9qZWN0Rm9yRW1haWxpbmdTZWxlY3Rpb25Wb3Rl",
          "status": "OPENED_PARTICIPATION",
          "title": "Projet pour campagne (vote à la sélection)",
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjI=",
        "node": Object {
          "__typename": "Project",
          "archived": false,
          "id": "UHJvamVjdDpwcm9qZWN0V29ya2Zsb3dDb2xsZWN0Vm90ZQ==",
          "status": "OPENED_PARTICIPATION",
          "title": "BP vote étape de dépôt",
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjM=",
        "node": Object {
          "__typename": "Project",
          "archived": false,
          "id": "UHJvamVjdDpwcm9qZWN0V29ya2Zsb3dWb3Rl",
          "status": "OPENED_PARTICIPATION",
          "title": "BP vote parcours",
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjQ=",
        "node": Object {
          "__typename": "Project",
          "archived": false,
          "id": "UHJvamVjdDpwcm9qZWN0V29ya2Zsb3dWb3RlMg==",
          "status": "OPENED_PARTICIPATION",
          "title": "BP vote parcours min 2 max 2",
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjU=",
        "node": Object {
          "__typename": "Project",
          "archived": false,
          "id": "UHJvamVjdDpwcm9qZWN0UHJvcG9zYWxBcmNoaXZpbmc=",
          "status": "OPENED_PARTICIPATION",
          "title": "BP avec archivage des propositions",
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjY=",
        "node": Object {
          "__typename": "Project",
          "archived": false,
          "id": "UHJvamVjdDpwcm9qZWN0RGViYXRlT3BlbldpdGhvdXRWb3Rl",
          "status": "OPENED_PARTICIPATION",
          "title": "Débats ouvert sans vote",
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjc=",
        "node": Object {
          "__typename": "Project",
          "archived": false,
          "id": "UHJvamVjdDpwcm9qZWN0T3JnYVZpc2liaWxpdHlBZG1pbkFuZE1l",
          "status": "OPENED_PARTICIPATION",
          "title": "Budget Participatif d'organisation",
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjg=",
        "node": Object {
          "__typename": "Project",
          "archived": false,
          "id": "UHJvamVjdDpyYXBwb3J0RXZhbHVhdGlvbg==",
          "status": "OPENED_PARTICIPATION",
          "title": "Rapport d'évaluation 6 (AR6)",
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjk=",
        "node": Object {
          "__typename": "Project",
          "archived": false,
          "id": "UHJvamVjdDpwcm9qZWN0SWRmMw==",
          "status": "OPENED_PARTICIPATION",
          "title": "Budget Participatif IdF 3",
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjEw",
        "node": Object {
          "__typename": "Project",
          "archived": false,
          "id": "UHJvamVjdDpwcm9qZWN0Rm9vZA==",
          "status": "OPENED_PARTICIPATION",
          "title": "Food project",
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjEx",
        "node": Object {
          "__typename": "Project",
          "archived": false,
          "id": "UHJvamVjdDpwcm9qZWN0V2l0aEFub255bW91c1F1ZXN0aW9ubmFpcmU=",
          "status": "OPENED_PARTICIPATION",
          "title": "Projet avec questionnaire anonyme",
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjEy",
        "node": Object {
          "__typename": "Project",
          "archived": false,
          "id": "UHJvamVjdDpwcm9qZWN0V2l0aE93bmVy",
          "status": "OPENED_PARTICIPATION",
          "title": "Projet avec administrateur de projet",
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjEz",
        "node": Object {
          "__typename": "Project",
          "archived": false,
          "id": "UHJvamVjdDpwcm9qZWN0Q2FmZXRpZXI=",
          "status": "OPENED_PARTICIPATION",
          "title": "Sauvons nos cafés",
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjE0",
        "node": Object {
          "__typename": "Project",
          "archived": false,
          "id": "UHJvamVjdDpwcm9qZWN0Q2FubmFiaXM=",
          "status": "OPENED_PARTICIPATION",
          "title": "Débat sur le cannabis",
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjE1",
        "node": Object {
          "__typename": "Project",
          "archived": false,
          "id": "UHJvamVjdDpwcm9qZWN0RXhwb3J0",
          "status": "OPENED_PARTICIPATION",
          "title": "Projet pour consolider les exports",
        },
      },
    ],
    "totalCount": 38,
  },
}
`;

exports[`Internal|Query projects fetches opened projects 1`] = `
Object {
  "projects": Object {
    "edges": Array [
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjA=",
        "node": Object {
          "__typename": "Project",
          "archived": false,
          "id": "UHJvamVjdDpwcm9qZWN0Rm9yRW1haWxpbmdDb2xsZWN0Vm90ZQ==",
          "status": "OPENED_PARTICIPATION",
          "title": "Projet pour campagne (vote au dépôt)",
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjE=",
        "node": Object {
          "__typename": "Project",
          "archived": false,
          "id": "UHJvamVjdDpwcm9qZWN0Rm9yRW1haWxpbmdTZWxlY3Rpb25Wb3Rl",
          "status": "OPENED_PARTICIPATION",
          "title": "Projet pour campagne (vote à la sélection)",
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjI=",
        "node": Object {
          "__typename": "Project",
          "archived": false,
          "id": "UHJvamVjdDpwcm9qZWN0V29ya2Zsb3dDb2xsZWN0Vm90ZQ==",
          "status": "OPENED_PARTICIPATION",
          "title": "BP vote étape de dépôt",
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjM=",
        "node": Object {
          "__typename": "Project",
          "archived": false,
          "id": "UHJvamVjdDpwcm9qZWN0V29ya2Zsb3dWb3Rl",
          "status": "OPENED_PARTICIPATION",
          "title": "BP vote parcours",
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjQ=",
        "node": Object {
          "__typename": "Project",
          "archived": false,
          "id": "UHJvamVjdDpwcm9qZWN0V29ya2Zsb3dWb3RlMg==",
          "status": "OPENED_PARTICIPATION",
          "title": "BP vote parcours min 2 max 2",
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjU=",
        "node": Object {
          "__typename": "Project",
          "archived": false,
          "id": "UHJvamVjdDpwcm9qZWN0UHJvcG9zYWxBcmNoaXZpbmc=",
          "status": "OPENED_PARTICIPATION",
          "title": "BP avec archivage des propositions",
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjY=",
        "node": Object {
          "__typename": "Project",
          "archived": false,
          "id": "UHJvamVjdDpwcm9qZWN0V2l0aE9ubHlPdGhlclN0ZXBPcGVu",
          "status": "OPENED",
          "title": "BP avec étape personalisée ouverte",
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjc=",
        "node": Object {
          "__typename": "Project",
          "archived": false,
          "id": "UHJvamVjdDpwcm9qZWN0RGViYXRlT3BlbldpdGhvdXRWb3Rl",
          "status": "OPENED_PARTICIPATION",
          "title": "Débats ouvert sans vote",
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjg=",
        "node": Object {
          "__typename": "Project",
          "archived": false,
          "id": "UHJvamVjdDpwcm9qZWN0T3JnYVZpc2liaWxpdHlBZG1pbkFuZE1l",
          "status": "OPENED_PARTICIPATION",
          "title": "Budget Participatif d'organisation",
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjk=",
        "node": Object {
          "__typename": "Project",
          "archived": false,
          "id": "UHJvamVjdDpyYXBwb3J0RXZhbHVhdGlvbg==",
          "status": "OPENED_PARTICIPATION",
          "title": "Rapport d'évaluation 6 (AR6)",
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjEw",
        "node": Object {
          "__typename": "Project",
          "archived": false,
          "id": "UHJvamVjdDpwcm9qZWN0SWRmMw==",
          "status": "OPENED_PARTICIPATION",
          "title": "Budget Participatif IdF 3",
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjEx",
        "node": Object {
          "__typename": "Project",
          "archived": false,
          "id": "UHJvamVjdDpwcm9qZWN0Rm9vZA==",
          "status": "OPENED_PARTICIPATION",
          "title": "Food project",
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjEy",
        "node": Object {
          "__typename": "Project",
          "archived": false,
          "id": "UHJvamVjdDpwcm9qZWN0V2l0aEFub255bW91c1F1ZXN0aW9ubmFpcmU=",
          "status": "OPENED_PARTICIPATION",
          "title": "Projet avec questionnaire anonyme",
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjEz",
        "node": Object {
          "__typename": "Project",
          "archived": false,
          "id": "UHJvamVjdDpwcm9qZWN0V2l0aE93bmVy",
          "status": "OPENED_PARTICIPATION",
          "title": "Projet avec administrateur de projet",
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjE0",
        "node": Object {
          "__typename": "Project",
          "archived": false,
          "id": "UHJvamVjdDpwcm9qZWN0Q2FmZXRpZXI=",
          "status": "OPENED_PARTICIPATION",
          "title": "Sauvons nos cafés",
        },
      },
      Object {
        "cursor": "YXJyYXljb25uZWN0aW9uOjE1",
        "node": Object {
          "__typename": "Project",
          "archived": false,
          "id": "UHJvamVjdDpwcm9qZWN0Q2FubmFiaXM=",
          "status": "OPENED_PARTICIPATION",
          "title": "Débat sur le cannabis",
        },
      },
    ],
    "totalCount": 39,
  },
}
`;

exports[`Internal|Query projects search by project creator username 1`] = `
Object {
  "viewer": Object {
    "projects": Object {
      "edges": Array [
        Object {
          "node": Object {
            "creator": Object {
              "username": "welcomattic",
            },
            "title": "Budget Participatif Rennes",
          },
        },
        Object {
          "node": Object {
            "creator": Object {
              "username": "welcomattic",
            },
            "title": "Projet avec questionnaire",
          },
        },
        Object {
          "node": Object {
            "creator": Object {
              "username": "welcomattic",
            },
            "title": "Projet externe",
          },
        },
      ],
    },
  },
}
`;

exports[`Internal|Query projects search by project organization creator username 1`] = `
Object {
  "viewer": Object {
    "projects": Object {
      "edges": Array [
        Object {
          "node": Object {
            "creator": Object {
              "username": "welcomattic",
            },
            "title": "Budget Participatif Rennes",
          },
        },
        Object {
          "node": Object {
            "creator": Object {
              "username": "welcomattic",
            },
            "title": "Projet avec questionnaire",
          },
        },
        Object {
          "node": Object {
            "creator": Object {
              "username": "welcomattic",
            },
            "title": "Projet externe",
          },
        },
      ],
    },
  },
}
`;

exports[`Internal|Query projects search by project organization owner username 1`] = `
Object {
  "viewer": Object {
    "projects": Object {
      "edges": Array [
        Object {
          "node": Object {
            "owner": Object {
              "username": "GIEC",
            },
            "title": "Budget Participatif d'organisation",
          },
        },
        Object {
          "node": Object {
            "owner": Object {
              "username": "GIEC",
            },
            "title": "projectOrgaVisibilityMe",
          },
        },
        Object {
          "node": Object {
            "owner": Object {
              "username": "GIEC",
            },
            "title": "Rapport d'évaluation 6 (AR6)",
          },
        },
      ],
    },
  },
}
`;

exports[`Internal|Query projects search by project owner username 1`] = `
Object {
  "viewer": Object {
    "projects": Object {
      "edges": Array [
        Object {
          "node": Object {
            "owner": Object {
              "username": "GIEC",
            },
            "title": "Budget Participatif d'organisation",
          },
        },
        Object {
          "node": Object {
            "owner": Object {
              "username": "GIEC",
            },
            "title": "projectOrgaVisibilityMe",
          },
        },
        Object {
          "node": Object {
            "owner": Object {
              "username": "GIEC",
            },
            "title": "Rapport d'évaluation 6 (AR6)",
          },
        },
      ],
    },
  },
}
`;

exports[`Internal|Query projects search by project title 1`] = `
Object {
  "projects": Object {
    "edges": Array [
      Object {
        "node": Object {
          "title": "BP avec archivage des propositions",
        },
      },
    ],
  },
}
`;
